@@ -29,7 +29,10 @@ csscutildir = $(libexecdir)/cssc
 # so that when we do "make check", the "Tests passed" message
 # is emitted last (we wouldn't want "entering directory unused"
 # messages to make that scroll off the screen).
-SUBDIRS = bsd docs testutils auxfiles sccs-cgi googletest tests 
+# 
+# We run the unit tests before the regression tests in order to make
+# it more ovbious where the bug is when there is a test failure.
+SUBDIRS = bsd docs testutils auxfiles sccs-cgi googletest unit-tests tests 
 
 noinst_LIBRARIES = libcssc.a
 
