@@ -20,6 +20,8 @@ dnl    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 dnl 
 dnl $Id: configure.ac,v 1.18 2009/04/11 17:59:18 jay Exp $
 
+m4_include(googletest/m4/acx_pthread.m4)
+
 dnl Initialise.   Look for sccsfile.h to double-check that we are looking
 dnl at the correct directory.
 AC_INIT
@@ -118,7 +120,6 @@ fi
 AC_SUBST(max_line_length_description)dnl
 
 
-
 dnl Checks for programs.
 AC_PROG_INSTALL
 AC_PROG_CC
@@ -130,6 +131,8 @@ dnl something similar for MINIX (though CSSC has never been tested
 dnl on Minix as far as I know).
 AC_ISC_POSIX
 AC_MINIX
+
+AC_PROG_LIBTOOL
 
 AC_PROG_CXX
 AC_SUBST(GXX)dnl
@@ -249,7 +252,26 @@ echo "WARNING: please set the variable ZCAT_PROGRAM and re-run configure."
 echo 
 fi
 
+#--- begin code taken from googletest/configure.ac
+# Configure pthreads.
+AC_ARG_WITH([pthreads],
+            [AS_HELP_STRING([--with-pthreads],
+               [use pthreads (default is yes)])],
+            [with_pthreads=$withval],
+            [with_pthreads=check])
 
+have_pthreads=no
+AS_IF([test "x$with_pthreads" != "xno"],
+      [ACX_PTHREAD(
+        [],
+        [AS_IF([test "x$with_pthreads" != "xcheck"],
+               [AC_MSG_FAILURE(
+                 [--with-pthreads was specified, but unable to be used])])])
+       have_pthreads="$acx_pthread_ok"])
+AM_CONDITIONAL([HAVE_PTHREADS],[test "x$have_pthreads" == "xyes"])
+AC_SUBST(PTHREAD_CFLAGS)
+AC_SUBST(PTHREAD_LIBS)
+#--- end code taken from googletest/configure.ac
 				
 
 dnl Checks for libraries.
@@ -431,5 +453,5 @@ dnl otherwise you get an error when you run configure.  AC_OUTPUT
 dnl deletes confdefs.h and so the second invocation can't find it
 dnl and so things go wrong.
 
-AC_CONFIG_FILES([version.cc Makefile sccsdiff.sh bsd/Makefile tests/Makefile docs/Makefile testutils/decompress_stdin.sh auxfiles/Makefile auxfiles/CSSC.spec sccs-cgi/Makefile docs/config-info.texi])
+AC_CONFIG_FILES([version.cc Makefile sccsdiff.sh bsd/Makefile unit-tests/Makefile tests/Makefile docs/Makefile testutils/decompress_stdin.sh auxfiles/Makefile auxfiles/CSSC.spec sccs-cgi/Makefile docs/config-info.texi])
 AC_OUTPUT
